--- a/r33.html
+++ b/r33.html
@@ -31,7 +31,7 @@
         <section id="container">
             <article>
                 <h1>Nissan GTR R33</h1>
-                <img src="images/r33.jpg" alt="Nissan GTR R33">
+                <img src="images/r33_1.jpg" alt="Nissan GTR R33" class="image">
                 <p>The Nissan GTR R33 is the successor to the R32 and the predecessor of the R34. It was produced from
                     1995 to 1998. The R33 is known for its improved aerodynamics, refined handling, and increased power.
                     It is still a favorite among car enthusiasts and collectors.</p>
