--- a/r34.html
+++ b/r34.html
@@ -31,7 +31,7 @@
         <section id="container">
             <article>
                 <h1>Nissan GTR R34</h1>
-                <img src="images/nissanr34-2.jpg" alt="Nissan GTR R34" style="float: right; margin: 10px;">
+                <img src="images/r34_1.jpg" alt="Nissan GTR R34" class="image">
                 <p>The Nissan GTR R34 is the successor to the R33 and the predecessor of the R35. Produced from 1999 to
                     2002, the R34 is widely regarded as the pinnacle of the Skyline GT-R lineup. With its aggressive
                     styling, advanced technology, and impressive performance, the R34 remains a favorite among car
