--- a/r35.html
+++ b/r35.html
@@ -31,7 +31,7 @@
         <section  id="container">
             <article>
                 <h1>Nissan GTR R35</h1>
-                <img src="images/r35.jpg" alt="Nissan GTR R35" style="float: right; margin: 10px;">
+                <img src="images/r35_1.jpg" alt="Nissan GTR R35" class="image">
                 <p>The Nissan GTR R35 is the latest model in the legendary GT-R series. Launched in 2007, the R35 is a complete departure from its predecessors, featuring a new design, a more powerful engine, and advanced technology. The R35 has gained a reputation for its exceptional performance, making it one of the most formidable sports cars on the market.</p>
 
                 <h2>Variants and Models</h2>
