--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p>Enjoy your stay, and get ready to rev your engines!</p>
                 <section class="video-container">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/6zBJgjtC23U"
-                        title="YouTube video player" frameborder="0"
+                        title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                     <section class="video-description">
