--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section id="container">
             <article>
-                <h1>Welcome GTR Central</h1>
+                <h1>GTR Central</h1>
                 <p>Welcome to the ultimate destination for Nissan GT-R enthusiasts, where we invite you to join us in
                     the fast lane! Our website is the perfect place for those who crave the adrenaline rush of
                     high-performance sports cars and want to delve deeper into the world of Nissan GT-R.</p>
